# sclint

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test-linux-emscripten.yml  test-linux.yml  test-macos-emscripten.yml  test-macos.yml  test-windows.yml
sclint-js/: package-lock.json  package.json  sclint.js
src/: CMakeLists.txt  LintListener.hpp  MethodReturnWithLexicalScopeListener.hpp  sclint.cpp
src/detectors/: Detector.hpp  MethodReturnLexicalScope.hpp  Whitespace.hpp
src/lint/: CMakeLists.txt  Config.cpp  Config.hpp  Embind.cpp  Issue.hpp  Linter.cpp  Linter.hpp  ListenerMux.cpp  ListenerMux.hpp
src/lint/detectors/: AvoidCurryArgument.hpp  AvoidMethodReturnInNamedFunctions.hpp  Detector.cpp  Detector.hpp  DetectorList.hpp  ExampleDetector.hpp  LintTest.hpp  MethodReturnLexicalScope.hpp  OmitTrailingWhitespace.hpp  OneNewlineAtEndOfFile.hpp  WarnOnCurryArgument.hpp  Whitespace.hpp
tests/: CMakeLists.txt  noMethodReturnWithLexicalScope.scd
tests/AvoidCurryArgument/: .sclint  true_positive.scd
tests/AvoidMethodReturnInNamedFunctions/: .sclint  true_positive.scd
tests/NoMethodReturnWithLexicalScope/: .sclint
tests/OneNewlineAtEndOfFile/: n_newlines.scd  no_newline.scd
tests/WarnOnCurryArgument/: .sclint  true_positive.scd
tests/avoidMethodReturnInNamedFunctions/: false_positive.scd
tests/omitTrailingWhitespace/: true_positive.scd  true_positive.scd.ref
tests/oneNewlineAtEndOfFile/: n_newlines.scd.ref  no_newline.scd  no_newline.scd.ref  one_newline.scd  two_newlines.scd  two_newlines.scd.ref  whitespace_only.scd
